Add CSV master data support and enhance Docker configuration
- Introduced a new .dockerbuildignore-note.txt file with instructions for including and mounting CSV data in the Docker image.
- Updated .dockerignore to exclude unnecessary output directories while allowing the inclusion of the csv_master directory for seeding.
- Enhanced docker-compose.yml to reflect changes in volume mounts for CSV master files.
- Removed the obsolete csv_to_xml.py script to streamline the project.
- Added new Python scripts for fixing formal definition formatting and quality assessment of CSV data.
- Created new markdown files for HCI pattern quality assessments and improvements applied.
- Updated various CSV and JSON files to improve data representation and management in the Corpus Manager.

--- a/.dockerignore
+++ b/.dockerignore
@@ -58,10 +58,12 @@ docker-compose*.yml
 *.md
 docs/
 
-# Output directories (most should be generated, except csv_export for seeding)
+# Output directories
+# Include csv_master for seeding (this is the master CSV data)
+# Other output directories are excluded
 output/*
-!output/csv_export/
-csv_master/
+!output/csv_master/
+!output/csv_master/**
 
 # Logs
 *.log
