--- a/.gitignore
+++ b/.gitignore
@@ -4,37 +4,139 @@ __pycache__/
 *$py.class
 *.so
 .Python
-*.egg-info/
-dist/
 build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Virtual Environment
+# Virtual environments
 venv/
 env/
 ENV/
+env.bak/
+venv.bak/
 
-# Database
-*.db
-*.sqlite
-*.sqlite3
-
-# IDE
-.vscode/
+# PyCharm
 .idea/
-*.swp
-*.swo
-*~
+
+# VS Code
+.vscode/
+*.code-workspace
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*.ipynb
+
+# IPython
+profile_default/
+ipython_config.py
+
+# pyenv
+.python-version
+
+# pipenv
+Pipfile.lock
+
+# poetry
+poetry.lock
+
+# PEP 582
+__pypackages__/
+
+# Celery
+celerybeat-schedule
+celerybeat.pid
+
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
+
+# Pyre type checker
+.pyre/
+
+# pytype static type analyzer
+.pytype/
+
+# Cython debug symbols
+cython_debug/
 
 # Testing
 .pytest_cache/
 .coverage
+.coverage.*
 htmlcov/
+coverage.xml
+*.cover
+.hypothesis/
 .tox/
-test_patterns.db
 
-# OS
-.DS_Store
-Thumbs.db
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+patterns.db
+test_patterns.db
 
 # Logs
 *.log
+logs/
+
+# OS files
+.DS_Store
+Thumbs.db
+*~
+*.swp
+*.swo
+
+# Project specific
+output/generated_md/*.md
+output/m2m/xml/*.xml
+output/m2m/yaml/*.yaml
+output/csv_master/*.csv
+output/*.jsonl
+output/*.csv
+output/*.json
+output/*.xml
+output/*.yaml
+
+# Keep directory structure but ignore contents
+output/generated_md/.gitkeep
+output/m2m/xml/.gitkeep
+output/m2m/yaml/.gitkeep
+output/csv_master/.gitkeep
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
